Tidied up css and code

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,17 @@
 {
-  "venvPath": "/Users/james/dev/imsimbi/xblock-sdk",
+  "venvPath": "../xblock-sdk",
   "venv": ".venv",
-  "typeCheckingMode": "basic"
+  "typeCheckingMode": "basic",
+  "reportArgumentType": false,
+  "reportIndexIssue": false,
+  "reportUnknownArgumentType": false,
+  "reportUnknownParameterType": false,
+  "reportUnknownMemberType": false,
+  "reportMissingTypeStubs": false,
+  "reportGeneralTypeIssues": false,
+  "reportAttributeAccessIssue": false,
+  "reportOptionalSubscript": false,
+  "reportOptionalMemberAccess": false,
+  "reportOptionalCall": false,
+  "reportOptionalIterable": false
 }
